home page and login page

--- a/medlog/src/pages/home/home.html
+++ b/medlog/src/pages/home/home.html
@@ -1,15 +1,13 @@
-<ion-header>
+<ion-header class= "header-bg">
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu" style="color:#EFEFF1"></ion-icon>
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Current Latitude: {{locationTracker.lat}}</h3>
-  <h3>Current Longitude: {{locationTracker.lng}}</h3>
-  <button ion-button full primary (click)="start()">Start Tracking</button>
-  <button ion-button full primary (click)="stop()">Stop Tracking</button>
+<ion-content justify-content-center padding>
+  <button class="confirm-button" *ngIf="!checkedIn"ion-button full primary (click)="start()">Fazer check-in</button>
+  <button class="confirm-button" *ngIf="checkedIn" ion-button full primary (click)="stop()">Check-out</button>
 </ion-content>
